タスクの編集機能追加が完了。ESlintとprettierの設定も行ってみた

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 
   color-scheme: light dark;
   color: rgba(51, 48, 48, 0.87);
-  background-color: #faf4f4;
+  background-color: #fbf7f7;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
