未完成ではあるがある程度は完成したので、とりあえずデプロイします

--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(51, 48, 48, 0.87);
-  background-color: #fbf7f7;
+  color: rgba(48, 49, 51, 0.87);
+  background-color: #f8fafaeb;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
